
[package]
name = "rush-fuzz"
version = "0.0.1"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "std"] }
futures = "0.3.9"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "time"] }

[dependencies.rush]
path = ".."
features = ["fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = true
doc = false
