[package]
name = "rush-fuzz"
version = "0.0.1"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4" }
afl = { version = "0.8", optional = true }
codec = { package = "parity-scale-codec", version = "*", default-features = false, features = ["derive"] }
tokio = { version = "*" }
log = "*"
aleph-bft = { path = "..", features = ["fuzz"] }

# # Prevent this from interfering with workspaces
# [workspace]
# members = ["."]

[features]
default = []

[[bin]]
name = "fuzz_target_1"
path = "libfuzz_targets/fuzz_target_1.rs"
test = true
doc = false

[[bin]]
name = "fuzz_target_1_afl"
path = "afl_targets/fuzz_target_1.rs"
required-features = ["afl"]